# miroir

./: .gitignore  Cargo.toml  README.md
assets/: cylinder.json  diamond_of_hell.json  edge.json  loop_detection_test.json  random_2d.json  simple_2d.json  simple_2dsphere.json  simple_3d.json  simple_sphere3d.json
gen_rand_sim/: Cargo.toml
gen_rand_sim/src/: main.rs
miroir/: Cargo.toml  README.md
miroir/src/: lib.rs  nalg.rs
miroir_core/: Cargo.toml  README.md
miroir_core/src/: lib.rs
miroir_glium/: Cargo.toml  README.md
miroir_glium/examples/: cylinder.rs  edge.rs  many_line_segments.rs  simple_2d.rs  trapped_in_square.rs  trapped_simple_loops.rs  trapped_with_sphere.rs
miroir_glium/src/: camera.rs  lib.rs  renderable.rs  sim_render_data.rs
miroir_numworks/: Cargo.toml  README.md
miroir_numworks/.cargo/: config.toml
miroir_numworks/examples/: trapped_circle.rs
miroir_numworks/src/: lib.rs
miroir_shapes/: Cargo.toml  README.md
miroir_shapes/src/: cylinder.rs  lib.rs  simplex.rs  sphere.rs
reflect/: Cargo.toml
reflect/src/: lib.rs  mirror.rs
reflect_glium/: Cargo.toml
reflect_glium/examples/: cylinder.rs  edge.rs  loop_detection.rs  many_line_segments.rs  many_mirrors.rs  simple_2d.rs  trapped.rs  trapped_in_square.rs  trapped_simple_loops.rs  trapped_sphere.rs  trapped_with_sphere.rs
reflect_glium/src/: app.rs  camera.rs  lib.rs  ray_render_data.rs  renderable.rs  sim_render_data.rs
reflect_json/: Cargo.toml
reflect_json/src/: lib.rs
reflect_mirrors/: Cargo.toml
reflect_mirrors/src/: cylinder.rs  lib.rs  plane.rs  simplex.rs  sphere.rs
reflect_numworks/: Cargo.toml
reflect_numworks/examples/: circle_in_screen_borders.rs  trapped_circle.rs
reflect_numworks/src/: lib.rs
reflect_random/: Cargo.toml
reflect_random/src/: lib.rs
run_sim_json/: Cargo.toml
run_sim_json/src/: main.rs
