[package]

name = "miroir_glium"
version = "0.1.0"
edition = "2021"

[dependencies]

miroir = { path = "../miroir" }

# TODO: update this
glium = "0.32"

impl-trait-for-tuples = "0.2"
num-traits = { version = "0.2", default-features = false }

# TODO: work on getting rid of this
glium_shapes = { git = "https://github.com/FlashOnFire/glium_shapes.git", branch = "glium-0.32.2" }

[dev-dependencies]

miroir_shapes = { path = "../miroir_shapes", features = ["miroir_glium"] }