[package]

name = "miroir_numworks"
version = "0.1.0"
edition = "2024"

[dependencies]

impl-trait-for-tuples = "0.2"
miroir = { path = "../miroir", default-features = false,  features = ["libm"] }
num-traits = { version = "0.2", default-features = false }
eadk = { git = "https://github.com/AquaEBM/eadk_rs" }

[features]

default = ["nalgebra"]
nalgebra = ["miroir/nalgebra"]
alloc = ["miroir/alloc"]

[dev-dependencies]

miroir_shapes = { path = "../miroir_shapes", features = ["numworks"] }