[package]
name = "miroir_shapes"
version = "0.1.0"
edition = "2021"

[dependencies]

miroir = { path = "../miroir", default-features = false }
arrayvec = { version = "0.7", default-features = false }
miroir_glium = { path = "../miroir_glium", optional = true }
miroir_numworks = { path = "../miroir_numworks", optional = true }
num-traits = { version = "0.2", default-features = false }

[features]

numworks = ["dep:miroir_numworks"]
glium = ["dep:miroir_glium"]