[package]

name = "reflect_glium"
version = "0.1.0"
edition = "2021"

[dependencies]

reflect = { path = "../reflect" }
reflect_mirrors = { path = "../reflect_mirrors" }

glium = "0.32"

impl-trait-for-tuples = "0.2"
num-traits = { version = "0.2", default-features = false }

# TODO: work on getting rid of these

glium_shapes = { git = "https://github.com/FlashOnFire/glium_shapes.git", branch = "glium-0.32.2" }