[package]

name = "reflect_numworks"
version = "0.1.0"
edition = "2021"

[dependencies]

impl-trait-for-tuples = "0.2"
reflect = { path = "../reflect" }
reflect_mirrors = { path = "../reflect_mirrors" }
num-traits = { version = "0.2", default-features = false }
eadk = { git = "https://github.com/AquaEBM/eadk_rs" }